--- a/package.json
+++ b/package.json
@@ -18,20 +18,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@auth0/auth0-react": "^2.1.0",
     "@ar-js-org/ar.js": "3.4.2",
+    "@auth0/auth0-react": "^2.1.0",
     "@react-three/fiber": "^8.13.2",
+    "@types/cors": "^2.8.13",
     "ar.js": "^2.2.2",
     "axios": "^1.4.0",
     "concurrently": "^8.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "pg": "^8.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.12.0",
+    "react-router-dom": "^6.12.1",
     "sequelize": "^6.32.0",
     "socket.io": "^4.6.2",
+    "socket.io-client": "^4.6.2",
     "three": "^0.153.0"
   },
   "devDependencies": {
